--- a/src/main/resources/templates/view_notes.html
+++ b/src/main/resources/templates/view_notes.html
@@ -16,8 +16,8 @@
                 <p class="fs-5 text-center text-success">[[${session.msg}]] </p>
                 <th:block th:text="${@userService.removeSessionMsg()}"></th:block>
             </th:block>
-            <div class="row">
 
+            <div class="row">
                 <div th:each="n:${notesList}" class="col-md-10 offset-md-1 mt-2">
                     <div class="card shadow p-1 mb-1 bg-body rounded">
                         <div class="card-body">
@@ -34,9 +34,23 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
+            <!-- <div class="row mt-3">
+                <div class="col-md-4 offset-md-1 text-right p-3">
+                    <p class="fw-bold">Total Notes : 12</p>
+                </div>
+                <div class="col-md-6 offset-md-1">
+                    <nav aria-label="Page navigation example" class="text-center">
+                        <ul class="pagination">
+                          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                          <li class="page-item"><a class="page-link" href="#">1</a></li>
+                          <li class="page-item"><a class="page-link" href="#">2</a></li>
+                          <li class="page-item"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                      </nav>
+                </div>
+            </div> -->
         </div>
     </section>
 </body>
