--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <section>
-        <h1>Index Page</h1>
+        <div class="shadow-lg p-3 mb-5 bg-body rounded col-md-10 offset-md-1 mt-5">
+            <p class="text-center fs-1"><i class="fa-solid fa-pen-nib"></i> "Welcome to E-Note Web Application."<i class="fa-brands fa-studiovinari"></i></p>
+            <p class="text-center fs-4"><i class="fa-solid fa-cloud"></i> <i>Write your thoughts and make them memorable.</i> <i class="fa-solid fa-brain"></i></p>
+        </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
